<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/maldives"
    android:foregroundTint="#3949AB"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button3"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="64dp"
        android:background="@drawable/round_btn"
        android:bufferType="spannable"
        android:text="@string/Login"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.685"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button4"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="69dp"
        android:background="@drawable/round_btn"
        android:text="@string/Register"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.836"
        tools:ignore="MissingConstraints,OnClick" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="284dp"
        android:layout_height="100dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="#18249C"
        android:textSize="48sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23" />


</androidx.constraintlayout.widget.ConstraintLayout>