<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_130sdp"
        android:layout_marginLeft="@dimen/_17sdp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092"
        app:srcCompat="@drawable/login" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="@dimen/_210sdp"
        android:layout_height="@dimen/_30sdp"
        android:gravity="center"
        android:text="@string/register_"
        android:textColor="#BC000000"
        android:textSize="@dimen/_22ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="@dimen/_10sdp"
        android:ems="10"
        android:hint="Email ID"
        android:inputType="textPersonName"
        android:minHeight="@dimen/_20sdp"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingRight="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.109" />

    <Button
        android:id="@+id/button2"
        android:layout_width="224dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/_1sdp"
        android:layout_marginEnd="@dimen/_1sdp"
        android:background="@drawable/submit"
        android:onClick="login"
        android:text="@string/submit"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.853" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/black"
        android:text="@string/forget"
        android:textSize="@dimen/_13ssp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.741" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't Have an Account ? "
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:backgroundTint="#831F1F"
            android:text="SignUp"
            android:textColor="#CC1C1C"
            android:textIsSelectable="false" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/baseline_security_24"
        android:drawablePadding="@dimen/_10sdp"
        android:ems="10"
        android:hint="PASSWORD"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingRight="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.643" />

    <CheckBox
        android:id="@+id/eye2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="104dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName10"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UnknownIdInLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>